--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,9 +1,11 @@
 body {
     padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 @media (min-height: 700px) {
     body {
         padding-top: 5rem;
+        padding-bottom: 5rem;
     }
 }
