--- a/front/src/index.css
+++ b/front/src/index.css
@@ -26,6 +26,10 @@ body {
     opacity: 1;
 }
 
+.exercise-card__title {
+    padding-top: 0.375rem;
+}
+
 .exercise-card .list-group-item {
     background: transparent;
 }
@@ -34,14 +38,9 @@ body {
     background-color: #f8f9fa !important;
 }
 
-.exercise-card--blocked {
+.exercise-card--blocked, .exercise-card--presented {
     background-color: #f8d7da !important;
     border-color: #f5c2c7 !important
-}
-
-.exercise-card--presented {
-    background-color: #d1e7dd !important;
-    border-color: #badbcc !important;
 }
 
 .exercise-card--reserved {
