--- a/front/src/index.css
+++ b/front/src/index.css
@@ -26,6 +26,10 @@ body {
     opacity: 1;
 }
 
+.exercise-card__correction-grid {
+    margin-top: 1rem;
+}
+
 .exercise-card__title {
     padding-top: 0.375rem;
 }
